trying to fix background image on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,8 @@ body {
 }
 body {
   background: url(../images/bg-scaled3.webp) no-repeat center center fixed;
-  background-size: cover;
+  height: 100vh;
+  width: 100%;
 }
 
 /* Navbar Styling */
